manuscript (conclusions, intro, minor changes)
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@46 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -36,8 +36,14 @@
 }
 
 @article{MeinshausenBuehlmann2010,
- title={Stability selection}, volume={72},
- url={http://doi.wiley.com/10.1111/j.1467-9868.2010.00740.x}, number={4}, journal={Journal of the Royal Statistical Society - Series B: Statistical Methodology}, publisher={Wiley Online Library}, author={Meinshausen, Nicolai and B\"uhlmann, Peter}, year={2010}, pages={417--473}}
+ title={Stability selection}, 
+ volume={72},
+ number={4}, 
+ journal={Journal of the Royal Statistical Society - Series B: Statistical Methodology},
+ author={Meinshausen, Nicolai and B\"uhlmann, Peter}, 
+ year={2010}, 
+ pages={417--473}
+}
 
 @ARTICLE{BS2008,
   author = {Binder, H. and Schumacher, M.},
@@ -108,7 +114,7 @@
   year = {1999},
   volume = {18},
   pages = {2529--2545},
-  number = {17-18},
+  number = {17--18},
   key = {248}
 }
 
@@ -119,20 +125,19 @@
   journal = {Bioinformatics},
   year = {2009},
   volume = {25},
-  pages = {827-829},
+  pages = {827--829},
   number = {6}
 }
 
-@MANUAL{R08,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Development Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2008},
-  note = {{ISBN} 3-900051-07-0},
-  bdsk-url-1 = {http://www.R-project.org},
-  url = {http://www.R-project.org}
-}
+ @Manual{R11,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Development Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2011},
+    note = {{ISBN} 3-900051-07-0},
+    url = {http://www.R-project.org/},
+  }
 
 @ARTICLE{schumacher07,
   author = {Martin Schumacher and Harald Binder and Thomas Gerds},
@@ -140,7 +145,7 @@
   journal = {Bioinformatics},
   year = {2007},
   volume = {23},
-  pages = {1768-1774},
+  pages = {1768--1774},
   number = {14},
   keywords = {microarray, prediction, survival}
 }
@@ -178,7 +183,7 @@
   title = {Efficient parameter selection for support vector machines in classification and regression via model-based global optimization},
   booktitle = {Proceedings of the International Joint Conference of Neural Networks},
   year = {2005},
-  pages = {1431–-1438}
+  pages = {1431--1438}
 }
 
 @article{bovelstad07,
@@ -229,5 +234,34 @@
   pages={1029--1040},
   year={2006},
   publisher={Wiley Online Library}
+}
+
+@article{wasserman2009,
+  author={Wasserman, L. and Roeder, K.},
+  title={High dimensional variable selection},
+  journal={The Annals of Statistics},
+  volume={37},
+  number={5A},
+  pages={2178--2201},
+  year={2009}
+}
+
+@article{benner2010,
+  author={Benner, A. and Zucknick, M. and Hielscher, T. and Ittrich, C. and Mansmann, U.},
+  year={2010},
+  title={High-dimensional {Cox} models: The choice of penalty as part of the model building process},
+  journal={Biometrical Journal},
+  volume={52},
+  number={10},
+  pages={50--69}
+}
+
+@article{fan2010,
+  author={Fan, J. and Lv, J.},
+  year={2010},
+  title={A selective overview of variable selection in high dimensional feature space},
+  journal={Statistica Sinica},
+  volume={20},
+  pages={101--148}
 }
 
