interval search: text + pics updated, bib - add 1 ref
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@55 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -186,6 +186,15 @@
   pages = {1431--1438}
 }
 
+@article{Jones1998,
+  author = {Jones, D and Schonlau, M and Welch, W},
+  title = {Efficient global optimization of expensive black-box functions},
+  journal = {Journal of Global Optimization},
+  year = {1998},
+  volume = {13},
+  pages = {455--492}
+}
+
 @article{bovelstad07,
   Author = {B{\o}velstad, H M  M  and Nyg\r{a}rd, S   and St{\o}rvold, H L  L.  and Aldrin, M   and Borgan, O   and Frigessi, A   and Lingj{\ae}rde, O C  C. },
 	Date-Modified = {2009-11-10 16:31:32 +0100},
